[gd_scene load_steps=9 format=3 uid="uid://dwdoylad3f00s"]

[ext_resource type="Script" uid="uid://rlqnl5vb5p2b" path="res://player.gd" id="1_cvnsp"]
[ext_resource type="PackedScene" uid="uid://by7g6qtybner8" path="res://Interact/InteractRay.tscn" id="2_6t5aa"]
[ext_resource type="Script" uid="uid://cyxbbvd2gehv5" path="res://Scripts/camera_controller.gd" id="2_vgqql"]
[ext_resource type="AnimationLibrary" uid="uid://ch8vv30irx175" path="res://assets/Animations/AnimPack.res" id="5_x3wgy"]
[ext_resource type="PackedScene" uid="uid://b5dbgrg4q52co" path="res://Scenes/rigman.tscn" id="6_x3wgy"]

[sub_resource type="AnimationNodeBlendTree" id="AnimationNodeBlendTree_gymyn"]
nodes/output/position = Vector2(880, 60)

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_fkybt"]
radius = 0.17480469
height = 1.0317383

[sub_resource type="SphereShape3D" id="SphereShape3D_fkybt"]
radius = 2.7590625

[node name="Player" type="CharacterBody3D" groups=["controllable", "player"]]
collision_layer = 2
collision_mask = 23
floor_constant_speed = true
floor_block_on_wall = false
floor_snap_length = 0.2
script = ExtResource("1_cvnsp")

[node name="CameraController" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.9195801, -0.20008312)
top_level = true
script = ExtResource("2_vgqql")

[node name="Camera3D" type="Camera3D" parent="CameraController"]

[node name="AsdioRaycast" type="Node3D" parent="CameraController"]

[node name="InteractRay" parent="CameraController" instance=ExtResource("2_6t5aa")]
transform = Transform3D(4, 0, 0, 0, 4, 0, 0, 0, 1, 0, 0, 0)
hit_from_inside = true
debug_shape_thickness = 5

[node name="DefaulLookAtTarget" type="Marker3D" parent="CameraController"]

[node name="CameraControllerAnchor" type="Marker3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.77827775, -0.28637823)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../rigman")
libraries = {
&"AnimPack": ExtResource("5_x3wgy")
}
autoplay = "AnimPack/idle_3"

[node name="AnimationTree" type="AnimationTree" parent="."]
deterministic = false
root_node = NodePath("../rigman")
tree_root = SubResource("AnimationNodeBlendTree_gymyn")
anim_player = NodePath("../AnimationPlayer")

[node name="rigman" parent="." instance=ExtResource("6_x3wgy")]
transform = Transform3D(-1, 0, -1.509958e-07, 0, 1, 0, 1.509958e-07, 0, -1, 0, 0, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5163574, -0.0653678)
shape = SubResource("CapsuleShape3D_fkybt")

[node name="Area3D" type="Area3D" parent="."]
collision_mask = 2

[node name="CollisionShape3D" type="CollisionShape3D" parent="Area3D"]
shape = SubResource("SphereShape3D_fkybt")

[connection signal="body_entered" from="Area3D" to="." method="_on_area_3d_body_entered"]
[connection signal="body_exited" from="Area3D" to="." method="_on_area_3d_body_exited"]
